# eads

./: Dockerfile  README.md
2_Test_Ejer7b_Chat/: 2_Test_Ejer7b_Chat  CMakeCache.txt  CMakeLists.txt  Makefile  Tests.txt  cmake_install.cmake
2_Test_Ejer7b_Chat/Debug/: Chat.d  ChatTest.d  Ejer7b_Chat  makefile  subdir.mk
